refactor(Race): Use Collections.sort and get(0)